@@ -1,5 +1,7 @@
 *Edge*
 
+* Added test/do declaration style testing to ActiveSupport::TestCase [DHH via Jay Fields]
+
 * Added Object#present? which is equivalent to !Object#blank? [DHH]
 
 * Added Enumberable#several? to encapsulate collection.size > 1 [DHH]
